feat: add admin and new ai-tutor agents